# DeepLearningDeployment

./: README.md  cpu_speed_comparison.ipynb  pytorch_onnx_cpu_speed_comparison.ipynb  tensorRT_pytorch_speed_comparison.txt
onnx/: inference.py
onnxruntime/: pytorch_onnx_cpu_speed_comparison.ipynb
onnxruntime/cpp_deploy/: CMakeLists.txt
onnxruntime/cpp_deploy/scripts/: onnxruntime_install.sh  opencv_normall_install.sh  test_time.sh
onnxruntime/cpp_deploy/src/: CMakeLists.txt  inference.cpp  inference.h  main.cpp
onnxruntime/python/: onnxruntime_inference.py
onnxruntime/python_cpp_extension/: calling_cpp.py  extern_for_python.cpp  test  test.cpp
onnxruntime/python_cpp_extension/demo/: demo_extern.cpp  demo_predict.cpp  demo_predict.h
openvino/: openvino_install.sh
openvino/cpp_deploy/: demo.cpp
openvino/python/: openvino_inference.py  transfer_to_ir.sh
openvino/scripts/: transfer_to_ir.sh
python/: predict.py  to_onnx.py
pytorch/: inference.py  to_onnx.py
results/: cpu_speed.json  cpu_speed.txt  gpu_speed.json  gpu_speed.txt  maskrcnn_backbone_speed.txt  maskrcnn_speed.txt
tensorrt/cpp_deploy/scripts/: opencv_colab_install_script.sh  test_time.sh
tensorrt/cpp_deploy/src/: CMakeLists.txt  inference.cpp  inference.h  main.cpp
tensorrt/python/: trt_inferece.py
tensorrt/python_cpp_extension/: extern_for_python.cpp
tensorrt/serialize_engine_from_onnx_cpp/: CMakeLists.txt
tensorrt/serialize_engine_from_onnx_cpp/src/: CMakeLists.txt
tensorrt_deployment/deploy_gpu/: CMakeLists.txt
tensorrt_deployment/deploy_gpu/src/: inference.h
tensorrt_deployment/python/: trt_colab_install.sh  trt_inferece.py
tensorrt_deployment/python_extension/: extern_for_python.cpp
tensorrt_deployment/serialize_engine_from_onnx/src/: trt_parse_onnx_N_save.cpp
tvm/: auto-scheduling.ipynb  total_latency.tsv
tvm(to_be_tested)/: (ing)maskrcnn.ipynb  auto_scheduling.py  auto_tuning.py  config.py  tvm_inference.py  tvm_install.sh  tvm_install_on_colab.sh  utils.py
tvm/cpp_deploy/: cpp_demo.cpp
tvm/python/: auto_scheduling.py  utils.py
tvm/scripts/: tvm_install.sh  tvm_install_on_colab.sh
